[package]
name = "deca"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["text-editor", "tui"]
categories = ["text-editors", "command-line-utilities"]
repository = "https://github.com/a222red/deca"
description = "A minimalist TUI text editor"

[dependencies]
crossterm = "0.25.0"
# clipboard = { git="https://github.com/aweinstock314/rust-clipboard", branch="master", version="0.5.0" }
