[package]
name = "deka"
version = "0.3.2"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["text-editor", "tui"]
categories = ["text-editors", "command-line-utilities"]
repository = "https://github.com/a222red/deka"
description = "A minimalist TUI text editor"

[dependencies]
crossterm = "0.25.0"
terminal-clipboard = "0.3.1"
